[411] Home page - Fix rounded corners in main search box on ios. Darken footer links for accessibility. Enable nav search label with css.

--- a/src/css/dgu-shared.less
+++ b/src/css/dgu-shared.less
@@ -252,6 +252,14 @@ body {
       * { display: none; }
     }
   }
+  .hidden-apart-from-screen-reader {
+    position: absolute;
+    left: -10000px;
+    top: auto;
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
+  }
   .text-links {
     float: left;
     margin: 3px 0 0 0;
@@ -266,6 +274,9 @@ body {
   .nav-search {
     input[type="text"] {
       border: none;
+      border-radius: 0;  /* Avoid rounded corners on iOS */
+      -webkit-border-radius: 0;
+      -webkit-appearance: none;  /* Avoid internal shadow on iOS */
     }
     a {
       background: #000;
@@ -308,7 +319,7 @@ body {
         padding: 0 0 0 10px;
     }
     .links a {
-        color: #666;
+        color: #4d4d4d;
     }
     @media (max-width: 767px) {
       margin-top: 0;
